# forge-funscript-engine

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: forge-container.md  index.md  unified-forge.spec.md
docs/background/: funscript.spec.md  funscriptforge.spec.md  unified-haptics-direction.md
examples/: README.md  restim_openfunscripter.txt  sample.chapters.json
prototype/: HANDOFF.md  USER_GUIDE.md  Unified Forge.html
prototype/scripts/: README.md  forge-components.jsx  forge-engine.js  forge-views.jsx
src/forge_funscript_engine/: __init__.py  __main__.py  analyze.py  assess.py  bundle.py  chapters.py  cli.py  estim.py  feel.py  funscript.py  lift.py  pipeline.py  safety.py  singleaxis.py
tests/: README.md  goldens.json  make_fixtures.py  test_assess.py  test_bundle.py  test_cli.py  test_phase1.py  test_phase2.py
tests/fixtures/: build-ramp.funscript  empty.funscript  fast-smooth.funscript  flat.funscript  huge-gap.funscript  irregular.funscript  max-speed.funscript  monotonic.funscript  shallow-fast.funscript  sharp-snap.funscript  single-point.funscript  slow-smooth.funscript
