[project]
name = "forge-funscript-engine"
version = "0.2.0"
description = "Motion funscript -> one device-agnostic intent signal -> N device files (Phase 1: e-stim alpha/beta/volume)."
requires-python = ">=3.10"
dependencies = []  # stdlib only, by design (see docs/unified-forge.spec.md)

[project.scripts]
forge-funscript-engine = "forge_funscript_engine.cli:main"

[project.optional-dependencies]
dev = ["pytest"]              # optional: tests are unittest.TestCase, pytest collects them
docs = ["mkdocs-material"]    # optional: `mkdocs serve` / `mkdocs build`

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
